--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -2,5 +2,10 @@
     display: flex;
     .homeContainer {
         flex: 6;
+        .widgets {
+            display: flex;
+            gap: 20px;
+            padding: 20px;
+        }
     }
 }
