--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -2,10 +2,14 @@
     display: flex;
     .homeContainer {
         flex: 6;
-        .widgets {
+        .widgets, .charts {
             display: flex;
             gap: 20px;
             padding: 20px;
+        }
+
+        .charts {
+            padding: 5px 20px;
         }
     }
 }
