--- a/src/components/datatable/datatable.scss
+++ b/src/components/datatable/datatable.scss
@@ -2,6 +2,25 @@
     height: 600px; 
     width: 100%;
     padding: 20px;
+    .datatableTitle {
+        font-size: 24px;
+        width: 100%;
+        color: gray;
+        margin-bottom: 10px;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        .link {
+            text-decoration: none;
+            color: green;
+            font-size: 14px;
+            font-weight: 400;
+            border: 1px solid green;
+            padding: 5px;
+            border-radius: 5px;
+        }
+    }
+
     .cellWithImg {
         display: flex;
         align-items: center;
