--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -33,6 +33,7 @@
                 display: flex;
                 align-items: center;
                 margin-right: 20px;
+                cursor: pointer;
                 svg {
                     font-size: 20px;
                 }
